# 3d_recognition_analisis

./: .gitignore  Makefile  README.md  environment-cpu.yml  environment.yml  pyproject.toml  requirements.txt  test.py
docs/: create_env.md  roadmap.md
notebooks/: 1.0-feature-comparison.ipynb  1.0-feature-extractor.ipynb  Untitled-4.ipynb  base_extractor.ipynb  best_cnn1d.pt  best_cnn1d_norm.pkl  best_pooled_mlp.pt  best_pooled_mlp_label_encoder.pkl  cnn1d_extractor.ipynb  history_cnn1d.json  history_pooled.json  unique_labels.csv  v1.0_brep_extractor.ipynb  v1.0_clip_model.ipynb  v1.0_norm_features copy.ipynb  v1.0_norm_features.ipynb  v1.1_brep_extractor.ipynb
src/: __init__.py  dataset.py  feature_io.py  features_data.py  metrics.py  plots.py  step_browser.py
src/analysis/: metrics.py  visualization.py
src/features/: attention_pool.py  brep.py  brepnet.py  clip.py  cnn_1d.py  dinov2.py  extractor.py  google_vit.py
src/modeling/: metrics.py  plots.py  train.py
src/modeling/CNN1D/: brep.py  cnn1d.py
src/modeling/data/: normalization.py
src/modeling/models/: cnn_1d_net.py  mlp_pooled.py
src/modeling/training/: trainer_cnn1d.py  trainer_pooled.py
src/modeling/utils/: aggregation.py  augment.py  feature_io.py  render_step.py  seed.py  splits.py
src/pipelines/: analitics_feature.py  build_dataset.py  data_pipeline.py  ext_features_pipeline.py
tests/: conftest.py  test_alysis_metrics.py  test_data.py  test_dataset.py  test_extract_features.py
